--- a/package.json
+++ b/package.json
@@ -9,15 +9,11 @@
     },
     "dependencies": {
         "@react-pdf/renderer": "^3.4.4",
-        "formidable": "^2.1.1",
-        "jsonc-parser": "^3.3.1",
         "next": "14.1.0",
-        "nodemailer": "^7.0.11",
         "@anthropic-ai/sdk": "^0.32.1",
         "openai": "^4.20.0",
         "react": "18.2.0",
-        "react-dom": "18.2.0",
-        "resend": "^6.5.2"
+        "react-dom": "18.2.0"
     },
     "engines": {
         "node": "20.x"
